# rust-fe-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO  Trunk.toml
migrations/2025-01-20-045254_create_users/: down.sql  up.sql
migrations/2025-01-22-071900_extend_users/: down.sql  up.sql
migrations/2025-02-05-081205_add_token_used/: down.sql  up.sql
migrations/2025-02-05-090944_more_indices/: down.sql  up.sql
migrations/2025-02-16-165934_drop_refresh_table/: down.sql  up.sql
migrations/2025-02-18-045958_posts_tables/: down.sql  up.sql
src/: main.rs  schema.rs
src/components/: top_bar.rs
src/domain/: user.rs
src/dto/: api_response.rs
src/dto/emails/: verify_your_email.rs
src/dto/requests/user/: check_if_user_exists_request.rs  login_request.rs  reset_password_request.rs  signup_request.rs  verify_user_email_request.rs
src/dto/responses/: response_data.rs  response_meta.rs
src/dto/responses/user/: email_validate_response.rs  login_response.rs  logout_response.rs  reset_password_request_response.rs  signup_response.rs
src/errors/: code_error.rs
src/handlers/: fallback.rs  root.rs
src/handlers/user/: check_if_user_exists.rs  login.rs  logout.rs  reset_password_request.rs  signup.rs  verify_user_email.rs
src/init/: compile_regex.rs  config.rs  server_init.rs  state.rs
src/jobs/auth/: invalidate_sessions.rs  purge_nonverified_users.rs
src/jobs/job_funcs/: every_hour.rs  every_minute.rs  every_second.rs  init_scheduler.rs
src/pages/: about.rs  signup.rs  works.rs
src/pages/about/: about.rs
src/pages/home/: home.rs
src/pages/login/: login.css  login.rs
src/pages/signup/: signup.css  signup.rs  signup_complete.rs
src/pages/validate_email/: validate_email.rs
src/routers/: main_router.rs
src/routers/middleware/: auth.rs  logging.rs
src/util/crypto/: hash_pw.rs  random_pw.rs  verify_pw.rs
src/util/email/: emails.rs  password_reset.html
src/util/string/: validations.rs
src/util/time/: duration_formatter.rs  now.rs
