[package]
name = "rust-be-template"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "unwind"

[dependencies]
# web framework
axum = { version = "0.8.1", features = ["http2", "multipart", "ws", "macros"] }
axum-extra = { version = "0.10.0", features = ["cookie", "attachment", "form"] }
tower-http = { version = "0.6.2", features = ["compression-gzip", "trace"] }

# parallelism
# rayon = "1.10.0"

# ORM
diesel = { version = "2.2.7", features = [
    "postgres",
    "chrono",
    "serde_json",
    "uuid",
] }
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"] }

# .env loading
dotenvy = "0.15.7"

# async runtime
tokio = { version = "1.43.0", features = ["full"] }

# loggers
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json"] }
tracing-appender = "0.2.3"

# error
anyhow = "1.0.95"

# number of cpus
num_cpus = "1.16.0"

# serialization/deserialization
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"

# types
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10.1", features = ["serde"] }
uuid = { version = "1.13.2", features = [
    "v4",
    "v7",
    "serde",
    "zerocopy",
    "fast-rng",
] }

# regex/verification
# regex = { version = "1.11.1", features = ["perf-dfa-full"] }
email_address = "0.2.9"

# crypto/rand
argon2 = "0.5.3"
rand = "0.8.5"

# memory allocator
mimalloc = "0.1.43"

# email
lettre = { version = "0.11.13", default-features = false, features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "tracing",
    "serde",
] }
scc = "2.3.3"
