[package]
name = "rust-fe-template"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "unwind"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.7", features = ["csr"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
serde_derive = "1.0.218"
web-time = "1.1.0"
