[package]
name = "rust-fe-template"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "unwind"

[dependencies]
# leptos (csr framework)
leptos = { version = "0.7.7", features = ["csr"] }
leptos_router = "0.7.7"

# wasm
web-time = "1.1.0"
console_error_panic_hook = "0.1.7"

# types
uuid = { version = "1.15.1", features = ["v4", "zerocopy", "serde", "js"] }
chrono = { version = "0.4.40", features = ["serde"] }

# http request client
gloo-net = "0.6.0"

# serialization/deserialization
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
web-sys = "0.3.77"
urlencoding = "2.1.3"
gloo-storage = "0.3.0"
tokio-stream = "0.1.17"
